--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 seed-0-mt=532569  # or any other 32-bit value
 network = epon_1G
-**.NumberOfONUs = 16
+**.NumberOfONUs = 4
 sim-time-limit = 50ms
-**.load = ${load=0.1..1.0 step 0.1}		# epon_dba_ipact.exe -r 0,1,2,3,4 -m -u Cmdenv -n . omnetpp.ini
+#**.load = ${load=0.1..1.0 step 0.1}		# epon_dba_ipact.exe -r 0,1,2,3,4 -m -u Cmdenv -n . omnetpp.ini
