--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -2,6 +2,6 @@
 seed-0-mt=532569  # or any other 32-bit value
 network = epon_1G
 **.NumberOfONUs = 16
-**.max_polling_cycle = 2.0		# can be 0.5, 1.0, 2.0 msec
+**.max_polling_cycle = 1.0		# can be 0.5, 1.0, 2.0 msec
 sim-time-limit = 5s
-#**.load = ${load=0.1..1.0 step 0.1}		# epon_dba_ipact.exe -r 0,1,2,3,4 -m -u Cmdenv -n . omnetpp.ini
+**.load = ${load=0.1..1.0 step 0.1}		# epon_dba_ipact.exe -r 0,1,2,3,4 -m -u Cmdenv -n . omnetpp.ini
